Colour each route leg by its position in the sequence
The route was one uniform line, so the order of travel was only readable by
chasing marker numbers. Each leg now carries its position as colour.

The geometry provider returns one polyline per leg instead of a single line,
built from OSRM's per-leg steps, so the client can style each independently.

On the colour itself: legs are ordinal, so the encoding is a single hue running
light to dark rather than a set of unrelated colours - a rainbow would read as
unrelated categories and lose the direction of travel, which is the whole point.

The five-step limit is measured, not guessed. On the OpenStreetMap tile
background, nine evenly spaced steps of one hue sit 0.047 apart in lightness
against the 0.06 needed to separate neighbours, and the source ramp's lightest
step reaches only 1.84:1 contrast against the tiles, under the 2:1 floor. The
shipped ramp clears both. Past five legs it interpolates, so colour carries
progression rather than identity - which is why identity also lives on the
numbered markers and a per-leg hover tooltip, neither of which degrades.

The return-to-depot leg stays outside the ramp, neutral and dashed: it delivers
nothing.

Verified: 2 stops produce 3 legs whose geometries sum to 29.33 km against the
29.27 km reported for the tour (0.21% deviation).